--- a/app/Resources/AthUserBundle/views/Security/login.html.twig
+++ b/app/Resources/AthUserBundle/views/Security/login.html.twig
@@ -11,11 +11,11 @@
                         <i class="fa fa-bars fa-2x"></i>
                     </a>
                     <h2>
-                        <strong>auth </strong><span>:</span>
+                        <strong>Bienvenue sur </strong><span>Athleteec</span>
                         <span class="yellow"></span>
                     </h2>
                     <p>
-                        I figured I could cut classes for the rest of the semester and he couldn't flunk me as long as I, you know, made the thing. So I finished it in a couple days. And it looked pretty lame, but it worked. You know, for putting in or whatnot. So when I showed it to Mr. Pike for my grade, he looked at it and said: 'Is that the best you can do?'
+                        Grâce à ce réseau social centré sur les sportifs, vous pourrez organiser des événements et suivre l'actualité sportive de vos amis et célébrités.
                     </p>
                 </div>
             </div>
