--- a/app/Resources/AthUserBundle/views/Security/login.html.twig
+++ b/app/Resources/AthUserBundle/views/Security/login.html.twig
@@ -11,11 +11,11 @@
                         <i class="fa fa-bars fa-2x"></i>
                     </a>
                     <h2>
-                        <strong>Bienvenue sur </strong><span>Athleteec</span>
+                        <strong>{{ "welcome" | trans({}, 'home') }}</strong> <span>Athleteec</span>
                         <span class="yellow"></span>
                     </h2>
                     <p>
-                        Grâce à ce réseau social centré sur les sportifs, vous pourrez organiser des événements et suivre l'actualité sportive de vos amis et célébrités.
+                        {{ "home_text" | trans({}, 'home') }}
                     </p>
                 </div>
             </div>
