--- a/app/Resources/views/top_nav.html.twig
+++ b/app/Resources/views/top_nav.html.twig
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ path('ath_main_homepage') }}">Athleteec</a>
+      <a class="navbar-brand" href="{{ path('ath_main_homepage') }}"><img width="180" style="margin-top: -6px;" src="/images/logo.png" alt="FR" /></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
