--- a/app/Resources/views/top_nav_admin.html.twig
+++ b/app/Resources/views/top_nav_admin.html.twig
@@ -30,7 +30,7 @@
                     </li>
                    
                     <li class="appName">
-                        <a class="navbar-brand" href="{{ path('ath_main_homepage') }}">Athleteec</a>
+                        <a class="navbar-brand" href="{{ path('ath_main_homepage') }}"><img width="180" style="margin-top: -8px;" src="/images/logo.png" alt="FR" /></a>
                     </li>
                 </ul>
             </div>
