--- a/app/Resources/views/Ath/Admin/Datavisualisation/user.html.twig
+++ b/app/Resources/views/Ath/Admin/Datavisualisation/user.html.twig
@@ -1,6 +1,6 @@
 
 {#  Appel les librairy jqplot #}
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="/sonata/js/jquery.jqplot.min.js"></script>
 <script type="text/javascript" src="/sonata/js/plugins/jqplot.barRenderer.js"></script>
 <script type="text/javascript" src="/sonata/js/plugins/jqplot.pieRenderer.js"></script>
