Edit profil test reste rendre rollback edit test

--- a/app/Resources/AthUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/AthUserBundle/views/Profile/edit_content.html.twig
@@ -3,7 +3,7 @@
 
 <div class="row">
 	
-<form action="{{ path('fos_user_profile_edit') }}" method="POST" {{ form_enctype(form) }}>
+<form id="form_profile" action="{{ path('fos_user_profile_edit') }}" method="POST" {{ form_enctype(form) }}>
 	{{ form_row(form._token) }}
     
     <div class="col-md-3">
